introduce a common container - navigation-bar; define one, reuse across all pages

--- a/src/media.html
+++ b/src/media.html
@@ -50,125 +50,16 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NWVP7S7"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+<!--Navigation bar-->
+<navigation-bar></navigation-bar>
+<!--Main body-->
 <div class="relative bg-white overflow-hidden">
     <div class="max-w-7xl mx-auto">
-        <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
+        <div class="relative z-8 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
             <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2"
                  fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
                 <polygon points="50,0 100,0 50,100 0,100"/>
             </svg>
-
-            <!-- Navigation bar-->
-            <div class="relative pt-6 px-4 sm:px-6 lg:px-8">
-                <nav id="site-menu" class="relative flex items-center justify-between sm:h-10 lg:justify-start"
-                     aria-label="Global">
-                    <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
-                        <div class="flex items-center justify-between w-full md:w-auto">
-                            <a href="/">
-                                <span class="sr-only">Peacemakr</span>
-                                <img class="h-6 w-auto sm:h-7"
-                                     src="./images/p_logo.png">
-                            </a>
-                            <div class="-mr-2 flex items-center md:hidden">
-                                <button type="button"
-                                        class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
-                                        id="main-menu" aria-haspopup="true"
-                                        onclick="navToggle();">
-                                    <span class="sr-only">Open main menu</span>
-                                    <!-- Heroicon name: menu -->
-                                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
-                                         viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                              d="M4 6h16M4 12h16M4 18h16"/>
-                                    </svg>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
-
-                        <a href="solutions.html" class="font-medium text-gray-500 hover:text-indigo-600">Solutions</a>
-
-                        <a href="engineers.html" class="font-medium text-gray-500 hover:text-indigo-600">Engineers</a>
-
-                        <a href="pricing.html" class="font-medium text-gray-500 hover:text-indigo-600">Pricing</a>
-
-                        <a href="media.html" class="font-medium text-gray-900 hover:text-indigo-600">Media</a>
-
-                        <a> <span class="text-2xl text-gray-900"> | </span> </a>
-
-                        <a href="https://admin.peacemakr.io/#/login"
-                           class="bg-indigo-600 rounded-lg px-3 py-1 font-medium text-gray-100 hover:bg-indigo-700">Login</a>
-                    </div>
-                </nav>
-            </div>
-
-            <!--
-      Mobile menu, show/hide based on menu open state.
-
-      Entering: "duration-150 ease-out"
-        From: "opacity-0 scale-95"
-        To: "opacity-100 scale-100"
-      Leaving: "duration-100 ease-in"
-        From: "opacity-100 scale-100"
-        To: "opacity-0 scale-95"
-    -->
-
-            <div id="menu" class="z-50 absolute top-0 inset-x-0 p-2 transition transform origin-top-right hidden">
-                <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
-                    <div class="px-5 pt-4 flex items-center justify-between">
-                        <div>
-                            <img class="h-6 w-auto"
-                                 src="./images/p_logo.png" alt="">
-                        </div>
-                        <div class="-mr-2">
-                            <button type="button"
-                                    class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
-                                    onclick="navToggle();">
-                                <span class="sr-only">Close main menu</span>
-                                <!-- Heroicon name: x -->
-                                <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
-                                     viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                          d="M6 18L18 6M6 6l12 12"/>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                    <div role="menu" aria-orientation="vertical" aria-labelledby="main-menu">
-                        <div class="px-2 pt-2 pb-3 space-y-1" role="none">
-                            <a href="/"
-                               class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
-                               role="menuitem">Home</a>
-
-                            <a href="solutions.html"
-                               class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
-                               role="menuitem">Solutions</a>
-
-                               <a href="engineers.html"
-                               class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
-                               role="menuitem">Engineers</a>
-
-                            <a href="pricing.html"
-                               class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
-                               role="menuitem">Pricing</a>
-
-                            <a href="media.html"
-                               class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
-                               role="menuitem">Media</a>
-
-                        </div>
-                        <div role="none">
-                            <a href="https://admin.peacemakr.io/#/login"
-                               class="block w-full px-5 py-3 text-center font-medium text-indigo-600 bg-gray-50 hover:bg-gray-100"
-                               role="menuitem">
-                                Log in
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- End navigation bar -->
 
             <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
                 <div class="sm:text-center lg:text-left">
