make sure all the pages are compiled

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,12 @@
 </head>
 
 <body>
+<!--Link all the pages-->
+<a href="solutions.html"></a>
+<a href="engineers.html"></a>
+<a href="media.html"></a>
+<a href="pricing.html"></a>
+
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NWVP7S7"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
