--- a/src/engineers.html
+++ b/src/engineers.html
@@ -73,9 +73,8 @@
             </main>
         </div>
     </div>
-    <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
-        <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full
-        " src="/images/engineers.jpg" alt="">
+    <div class="lg:absolute lg:inset-y-0 lg:-right-10 lg:w-1/2">
+        <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full "src="/images/engineers.jpg" alt="">
     </div>
 </div>
 
