--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,7 @@
 <a href="engineers.html"></a>
 <a href="media.html"></a>
 <a href="pricing.html"></a>
+<a href="./images/p_logo.png"></a>
 
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NWVP7S7"
