reference the podcast page

--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,7 @@
 <a href="media.html"></a>
 <a href="pricing.html"></a>
 <a href="./images/p_logo.png"></a>
+<a href="podcast.html"></a>
 
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NWVP7S7"
