--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,7 @@
 <a href="pricing.html"></a>
 <a href="./images/p_logo.png"></a>
 <a href="podcast.html"></a>
+<a href="engineers_faqs.html"></a>
 
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NWVP7S7"
