fix contact on faq page

--- a/src/engineers_faqs.html
+++ b/src/engineers_faqs.html
@@ -86,7 +86,7 @@
                         <span class="block xl:inline">Peacemakr<br/></span>
                         <span class="block text-indigo-600 xl:inline">FAQs</span>
                     </h1>
-                    <p class="mt-4 text-lg text-gray-500">Can’t find the answer you’re looking for? Reach out to our <a class="font-medium text-indigo-600 hover:text-indigo-500" href="#">customer support</a> team.
+                    <p class="mt-4 text-lg text-gray-500">Can’t find the answer you’re looking for? Reach out to our <a class="font-medium text-indigo-600 hover:text-indigo-500" href="mailto:info@peacemakr.io">customer support</a> team.
                     </p>
                 </div>
                 <div class="mt-12 lg:mt-0 lg:col-span-2">
