--- a/src/podcast.html
+++ b/src/podcast.html
@@ -49,7 +49,7 @@
 <navigation-bar></navigation-bar>
 <div class="relative bg-white overflow-hidden">
     <div class="max-w-7xl mx-auto">
-        <div class="relative z-9 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
+        <div class="relative z-9 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-24">
             <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2"
                  fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
                 <polygon points="50,0 100,0 50,100 0,100"/>
@@ -62,6 +62,7 @@
                         <span class="block text-indigo-600 xl:inline">of Silicon Valley</span>
                     </h1>
                 </div>
+
             </main>
         </div>
     </div>
@@ -71,19 +72,91 @@
 <main>
 
 
-<!-- This example requires Tailwind CSS v2.0+ -->
-<div class="bg-indigo-600">
-  <div class="max-w-2xl mx-auto text-center py-16 px-4 sm:py-20 sm:px-6 lg:px-8">
-    <h2 class="text-3xl font-extrabold text-white sm:text-4xl">
-      <span class="block">Discover Real People</span>
-      <span class="block">Overcoming Security Problems</span>
-    </h2>
-    <p class="mt-4 text-lg leading-6 text-indigo-200">Interviews with entrepreneurs, operators, engineers, and leaders that explore modern security dilemmas and opportunities we face. Because misery loves company. </p>
-    <a href="#" class="mt-8 w-full inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-indigo-50 sm:w-auto">
-      Notify me of New Episodes
-    </a>
+    <!-- Begin Mailchimp Signup Form -->
+<!-- <div id="mc_embed_signup">
+<form action="https://peacemakr.us1.list-manage.com/subscribe/post?u=ac9d1e71791321a3f00ebbf6d&amp;id=1f0cf83e57" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+  
+<div class="mc-field-group">
+  <label for="mce-EMAIL">Email Address </label>
+  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+<div class="mc-field-group input-group">
+    <strong>Interests </strong>
+    <ul><
+
+    li><input type="checkbox" value="1" name="group[380002][1]" id="mce-group[380002]-380002-0"><label for="mce-group[380002]-380002-0">Podcast</label></li>
+
+<li><input type="checkbox" value="2" name="group[380002][2]" id="mce-group[380002]-380002-1"><label for="mce-group[380002]-380002-1">Whitepaper</label></li>
+
+<li><input type="checkbox" value="4" name="group[380002][4]" id="mce-group[380002]-380002-2"><label for="mce-group[380002]-380002-2">Product Updates</label></li>
+
+<li><input type="checkbox" value="8" name="group[380002][8]" id="mce-group[380002]-380002-3"><label for="mce-group[380002]-380002-3">Investors</label></li>
+</ul>
+</div>
+  <div id="mce-responses" class="clear">
+    <div class="response" id="mce-error-response" style="display:none"></div>
+    <div class="response" id="mce-success-response" style="display:none"></div>
+  </div>     -->
+  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+<!--     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ac9d1e71791321a3f00ebbf6d_1f0cf83e57" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div> -->
+
+<!--End mc_embed_signup-->
+
+
+<!--
+  This example requires Tailwind CSS v2.0+ 
+  
+  This example requires some changes to your config:
+  
+  ```
+  // tailwind.config.js
+  module.exports = {
+    // ...
+    plugins: [
+      // ...
+      require('@tailwindcss/forms'),
+    ]
+  }
+  ```
+-->
+<div class="bg-white">
+  <div class="max-w-7xl mx-auto px-4 py-12 sm:px-6 lg:py-16 lg:px-8">
+    <div class="py-10 px-6 bg-indigo-600 rounded-3xl sm:py-16 sm:px-12 lg:p-20 lg:flex lg:items-center">
+      <div class="lg:w-0 lg:flex-1">
+        <h2 class="text-3xl font-extrabold tracking-tight text-white">
+          Discover Real People,<br>Overcoming Security Problems
+        </h2>
+        <p class="mt-4 max-w-3xl text-lg text-indigo-100">
+          30 mintues interviews with entrepreneurs, engineers, and leaders that explore modern security dilemmas and opportunities we face.
+        </p>
+      </div>
+      <div class="mt-12 sm:w-full sm:max-w-md lg:mt-0 lg:ml-8 lg:flex-1">
+        <form class="sm:flex" action="https://peacemakr.us1.list-manage.com/subscribe/post?u=ac9d1e71791321a3f00ebbf6d&amp;id=1f0cf83e57" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form">
+          <label for="emailAddress" class="sr-only">Email address</label>
+          <input type="email" value="" name="EMAIL" id="mce-EMAIL" autocomplete="email" required class="required email w-full border-white px-5 py-3 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white rounded-md" placeholder="Enter your email">
+          <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="mt-3 w-full flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white sm:mt-0 sm:ml-3 sm:w-auto sm:flex-shrink-0">
+            Subscribe
+          </button>
+          <input type="hidden" value="1" name="group[380002][1]" id="mce-group[380002]-380002-0">
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ac9d1e71791321a3f00ebbf6d_1f0cf83e57" tabindex="-1" value=""></div>
+        </form>
+<!-- MIKE:        <p class="mt-3 text-sm text-indigo-100">
+          We care about the protection of your data. Read our
+          <a href="#" class="text-white font-medium underline">
+            Privacy Policy.
+          </a>
+        </p> -->
+      </div>
+    </div>
   </div>
 </div>
+
 
 
 <!-- Feature table -->
@@ -226,7 +299,7 @@
         <div aria-hidden="true" class="absolute inset-x-0 top-0 h-1/2 bg-white lg:hidden"></div>
         <div class="mx-auto max-w-md px-4 sm:max-w-3xl sm:px-6 lg:p-0 lg:h-full">
           <div class="aspect-w-10 aspect-h-6 rounded-xl shadow-xl overflow-hidden sm:aspect-w-16 sm:aspect-h-7 lg:aspect-none lg:h-full">
-            <img class="object-cover lg:h-full lg:w-full" src="https://images.unsplash.com/photo-1520333789090-1afc82db536a?ixlib=rb-1.2.1&ixqx=k3I71IguDW&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2102&q=80" alt="">
+            <img class="object-cover lg:h-full lg:w-full" src="./images/JonMcLachlan-headshot.jpg" alt="">
           </div>
         </div>
       </div>
