- do not inject element dynamically, use gulp - readme update - single entry point for localdev and prod build

--- a/src/engineers.html
+++ b/src/engineers.html
@@ -22,6 +22,7 @@
           content="Data Security simplified."/>
     <script src="navbar.js" type="text/javascript"></script>
     <script src="animatedtext.js" type="text/javascript"></script>
+    @@include('./navigation_styling.html')
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-69K0GEH6J9"></script>
@@ -47,8 +48,7 @@
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <!--Navigation bar-->
-<navigation-bar></navigation-bar>
-<!--Main body-->
+@@include('./navigation.html')<!--Main body-->
 <div class="relative bg-white overflow-hidden">
     <div class="max-w-7xl mx-auto">
         <div class="relative z-8 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
