--- a/src/engineers_faqs.html
+++ b/src/engineers_faqs.html
@@ -38,6 +38,7 @@
             overflow: hidden;
         }
     </style>
+    @@include('./navigation_styling.html')
     <script src="navbar.js" type="text/javascript"></script>
     <script src="animatedtext.js" type="text/javascript"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -76,7 +77,7 @@
         <iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-NWVP7S7" style="display:none;visibility:hidden" width="0"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <navigation-bar></navigation-bar>
+    @@include('./navigation.html')
     <div class="bg-white">
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-20 lg:px-8">
             <div class="lg:grid lg:grid-cols-3 lg:gap-8">
