--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <!-- This is for the typing text annomation -->
     <script src="animatedtext.js" type="text/javascript"></script>
 
+    @@include('./navigation_styling.html')
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-69K0GEH6J9"></script>
@@ -74,7 +75,7 @@
 <!-- End Google Tag Manager (noscript) -->
 
 <!-- Navigation bar -->
-<navigation-bar></navigation-bar>
+@@include('./navigation.html')
 <!-- Main block starts here -->
 <div class="relative bg-white overflow-hidden">
     <div class="max-w-7xl mx-auto">
