--- a/src/media.html
+++ b/src/media.html
@@ -26,6 +26,7 @@
     <meta name="twitter:description"
           content="Data Security simplified."/>
     <script src="navbar.js" type="text/javascript"></script>
+    @@include('./navigation_styling.html')
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-69K0GEH6J9"></script>
@@ -51,7 +52,7 @@
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <!--Navigation bar-->
-<navigation-bar></navigation-bar>
+@@include('./navigation.html')
 <!--Main body-->
 <div class="relative bg-white overflow-hidden">
     <div class="max-w-7xl mx-auto">
