--- a/src/pricing.html
+++ b/src/pricing.html
@@ -22,6 +22,7 @@
           content="Data Security simplified."/>
     <script src="navbar.js" type="text/javascript"></script>
     <script src="animatedtext.js" type="text/javascript"></script>
+    @@include('./navigation_styling.html')
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-69K0GEH6J9"></script>
@@ -46,7 +47,7 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NWVP7S7"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-<navigation-bar></navigation-bar>
+@@include('./navigation.html')
 <!--Main body-->
 <div class="relative bg-white overflow-hidden">
     <div class="max-w-7xl mx-auto">
