--- a/src/solutions.html
+++ b/src/solutions.html
@@ -22,6 +22,7 @@
           content="Data Security simplified."/>
     <script src="navbar.js" type="text/javascript"></script>
     <script src="animatedtext.js" type="text/javascript"></script>
+    @@include('./navigation_styling.html')
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-69K0GEH6J9"></script>
@@ -48,7 +49,7 @@
 <!-- End Google Tag Manager (noscript) -->
 
 <!--Navigation bar-->
-<navigation-bar></navigation-bar>
+@@include('./navigation.html')
 <!--Main body-->
 <div class="relative bg-white overflow-hidden">
     <div class="max-w-7xl mx-auto">
