Make dots disappear on smaller windows, Add a blurb that explains us a little

--- a/src/index.html
+++ b/src/index.html
@@ -79,22 +79,26 @@
 <!-- Main block starts here -->
 <div class="relative bg-white overflow-hidden">
     <div class="max-w-7xl mx-auto">
-        <main class="mx-auto max-w-7xl sm:mt-14 sm:px-6">
-          <div class="lg:grid lg:grid-cols-2 lg:gap-8 items-start">
-            <div class="sm:text-center md:max-w-2xl md:mx-auto w-full lg:text-left">
+        <main class="mx-auto max-w-7xl mt-14 px-6">
+          <div class="lg:grid gap-2 lg:grid-cols-2 lg:gap-8 items-start">
+            <div class="text-center md:max-w-2xl md:mx-auto w-full lg:text-left">
               <h1>
-                <span class="text-4xl mt-1 block text-sxl tracking-tight font-extrabold sm:text-5xl xl:text-6xl">
-                  <span class="block text-gray-900 sm:text-5xl xl:text-6xl">Peacemakr</span>
+                <span class="text-4xl mt-1 block text-sxl tracking-tight font-extrabold text-5xl xl:text-6xl">
+                  <span class="block text-gray-900 text-5xl xl:text-6xl">Peacemakr</span>
                   <span class="block text-indigo-600">E2E-Encryption<br>at your service</span>
+                  <!-- <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0"></p> -->
+
                 </span>
                 </h1>
-                <!-- <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-xl lg:text-lg xl:text-xl">
-                  Data  security simplified.-->
+                 <p class="mt-3 text-base text-gray-500 mt-5 text-xl lg:text-lg xl:text-xl">
+                  Raise your data security bar with Open-Source and Zero-Trust, End-to-End-Encryption-as-a-Service and control costs and eliminate risky time-to-market delays.
                 </p>
             </div>
 
-            <div class="mt-0 relative max-w-min sm:mx-auto">
-              <svg class="absolute top-0 left-1/2 transform -translate-x-20 -translate-y-8" width="640" height="784" fill="none" viewBox="0 0 640 784">
+            <div class="mt-0 relative max-w-min mx-auto">
+
+              <!-- Gray block on the right  -->
+              <svg class="invisible lg:visible absolute top-0 left-1/2 transform -translate-x-40 -translate-y-20" width="640" height="784" fill="none" viewBox="0 0 640 784">
                     <defs>
                       <pattern id="9ebea6f4-a1f5-4d96-8c4e-4c2abf658047" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
                         <rect x="0" y="0" width="4" height="4" class="text-indigo-200" fill="currentColor" />
@@ -113,7 +117,7 @@
             </div>
           </div>
            <!-- These are the dots to the left -->
-          <div class="mt-1 relative max-w-min sm:mx-auto">
+          <div class="invisible lg:visible mt-1 relative max-w-min mx-auto">
                 <svg class="absolute top-3 right-1/2 transform -translate-x-20 -translate-y-24" width="640" height="784" fill="none" viewBox="0 0 640 784">
                       <defs>
                         <pattern id="9ebea6f4-a1f5-4d96-8c4e-4c2abf658047" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
