Add email CTA at very top of home page, collect up some warm leads

--- a/src/index.html
+++ b/src/index.html
@@ -139,14 +139,41 @@
 
 <main>
 
+  <!--
+  CTA - Data Security for Innovative Products
+-->
+<div class="bg-gray-50">
+  <div class="max-w-7xl mx-auto px-4 py-8 sm:px-6 lg:px-8">
+    <div class="py-10 px-6 bg-indigo-600 rounded-3xl sm:py-16 sm:px-12 lg:p-20 lg:flex lg:items-center">
+      <div class="lg:w-0 lg:flex-1">
+        <h2 class="text-3xl font-extrabold tracking-tight text-white">
+          Data Security for Innovative Products
+        </h2>
+        <p class="mt-4 max-w-3xl text-lg text-indigo-100">
+          Learn why Peacemakr is the best choice for startups and small businesses in Finance, Healthcare, Defense, and Insurance.
+        </p>
+      </div>
+      <div class="mt-12 sm:w-full sm:max-w-md lg:mt-0 lg:ml-8 lg:flex-1">
+        <form class="sm:flex">
+          <label for="emailAddress" class="sr-only">Email address</label>
+          <input id="emailAddress" name="emailAddress" type="email" autocomplete="email" required class="w-full border-white px-5 py-3 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white rounded-md" placeholder="Enter your email">
+          <button type="submit" class="mt-3 w-full flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white sm:mt-0 sm:ml-3 sm:w-auto sm:flex-shrink-0">
+            Get Whitepaper
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- CTA See Plans -->
-    <div class="bg-gray-50">
-        <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
+<!--     <div class="bg-gray-50">
+        <div class="max-w-7xl mx-auto py-18 px-4 sm:px-6 lg:py-20 lg:px-8 lg:flex lg:items-center lg:justify-between">
             <div>
                 <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
                     <span class="block">Start with our <span class="text-indigo-600">free tier</span> today</span>
                 </h2>
-                <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">Includes unlimited clients, unlimited encryption and decryption operations, 1,000 API Calls per month, and Bronze support.</p>
+                <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">Includes unlimited clients, unlimited encryptions and decryptions, 1,000 API Calls per month, and Bronze support.</p>
             </div>
             <div class="mt-8 flex lg:mt-0">
                 <div class="hadow">
@@ -157,7 +184,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
 <!-- TELL PEOPLE WHAT? (3 distinguishers) -->
@@ -272,6 +299,19 @@
   </div>
 </section>
 
+
+<!-- CTA - Start with our free tier today CENTERED -->
+<div class="bg-white">
+  <div class="max-w-2xl mx-auto text-center py-16 px-4 sm:py-20 sm:px-6 lg:px-8">
+    <h2 class="text-3xl font-extrabold text-gray-900 sm:text-4xl">
+      <span class="block">Start with our <span class="text-indigo-600">free tier</span> today</span>
+    </h2>
+    <p class="mt-4 text-lg leading-6 text-gray-500">Includes unlimited clients, unlimited encryptions and decryptions,<br>1,000 API Calls per month, and Bronze support.</p>
+    <a href="/pricing.html" class="mt-8 w-full inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 sm:w-auto">
+      See available plans
+    </a>
+  </div>
+</div>
 
 <!-- TELL THEM AGAIN! another 3 things -->
 <!-- CONTROL PANEL SCREEN SHOTS -->
