--- a/src/index.html
+++ b/src/index.html
@@ -154,12 +154,20 @@
         </p>
       </div>
       <div class="mt-12 sm:w-full sm:max-w-md lg:mt-0 lg:ml-8 lg:flex-1">
-        <form class="sm:flex">
+        <form class="sm:flex" action="https://peacemakr.us1.list-manage.com/subscribe/post?u=ac9d1e71791321a3f00ebbf6d&amp;id=1f0cf83e57" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form">
+          <input type="hidden" value="128" name="group[380002][128]" id="mce-group[380002]-380002-3">
           <label for="emailAddress" class="sr-only">Email address</label>
-          <input id="emailAddress" name="emailAddress" type="email" autocomplete="email" required class="w-full border-white px-5 py-3 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white rounded-md" placeholder="Enter your email">
-          <button type="submit" class="mt-3 w-full flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white sm:mt-0 sm:ml-3 sm:w-auto sm:flex-shrink-0">
+          <input type="email" value="" name="EMAIL" id="mce-EMAIL" required class="w-full border-white px-5 py-3 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white rounded-md" placeholder="Enter your email">
+          <button type="submit" class="mt-3 w-full flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white sm:mt-0 sm:ml-3 sm:w-auto sm:flex-shrink-0" name="subscribe" id="mc-embedded-subscribe">
             Get Whitepaper
           </button>
+
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
+            
+          <div style="position: absolute; left: -5000px;" aria-hidden="true">
+            <input type="text" name="b_ac9d1e71791321a3f00ebbf6d_1f0cf83e57" tabindex="-1" value="">
+          </div>
+
         </form>
       </div>
     </div>
