--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,7 @@
           <label for="emailAddress" class="sr-only">Email address</label>
           <input type="email" value="" name="EMAIL" id="mce-EMAIL" required class="w-full border-white px-5 py-3 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white rounded-md" placeholder="Enter your email">
           <button type="submit" class="mt-3 w-full flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white sm:mt-0 sm:ml-3 sm:w-auto sm:flex-shrink-0" name="subscribe" id="mc-embedded-subscribe">
-            Get Whitepaper
+            Get whitepaper
           </button>
 
           <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
