--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
           Security for Your Products
         </h2>
         <p class="mt-4 max-w-3xl text-lg text-indigo-100">
-          Learn why Peacemakr is the best choice for startups and small businesses in Finance, Healthcare, Defense, and Insurance that need a proven data security solution quickly.
+          Learn why Peacemakr is the best choice for startups and small businesses in Finance, Healthcare, Defense, and Insurance.
         </p>
       </div>
       <div class="mt-12 sm:w-full sm:max-w-md lg:mt-0 lg:ml-8 lg:flex-1">
