--- a/src/navigation.html
+++ b/src/navigation.html
@@ -65,7 +65,7 @@
                                         </svg>
                                         <div class="ml-4">
                                             <p class="text-base font-medium text-gray-900">
-                                                FAQs
+                                                FAQ
                                             </p>
                                             <p class="mt-1 text-sm text-gray-500">
                                                 Answers to most common questions.
@@ -175,7 +175,7 @@
                         </a>
 
                         <a href="engineers_faqs.html" class="text-base font-medium text-gray-900 hover:text-gray-700">
-                            FAQs
+                            FAQ
                         </a>
 
                         <a href="media.html" class="text-base font-medium text-gray-900 hover:text-gray-700">
