--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
                 </span>
                 </h1>
                  <p class="mt-3 text-base text-gray-500 mt-5 text-xl lg:text-lg xl:text-xl">
-                  Raise your data security bar with Open-Source and Zero-Trust End-to-End-Encryption-as-a-Service and control costs and eliminate risky time-to-market delays.
+                     Raise your data security bar with Open-Source and Zero-Trust End-to-End-Encryption-as-a-Service. Control costs. Eliminate risky time-to-market delays.
                 </p>
             </div>
 
