--- a/src/index.html
+++ b/src/index.html
@@ -288,8 +288,8 @@
         <ul class="space-y-12 sm:grid sm:grid-cols-2 sm:gap-x-6 sm:gap-y-12 sm:space-y-0 lg:gap-x-8">
           <li>
             <div class="space-y-4">
-              <div class="aspect-w-2 aspect-h-2">
-                <img class="object-cover rounded-lg" src="./images/screenshot3.png" alt="">
+              <div class="aspect-w-3 aspect-h-2">
+                <img class="rounded-lg" src="./images/screenshot3.png" alt="">
               </div>
 
               <div class="flex">
@@ -311,7 +311,7 @@
           <li>
             <div class="space-y-4">
               <div class="aspect-w-3 aspect-h-2">
-                <img class="object-cover rounded-lg" src="./images/screenshot1.png" alt="">
+                <img class="rounded-lg" src="./images/screenshot1.png" alt="">
               </div>
               <div class="flex">
                 <!-- Heroicon name: outline/check -->
@@ -332,7 +332,7 @@
           <li>
             <div class="space-y-4">
               <div class="aspect-w-3 aspect-h-2">
-                <img class="object-cover rounded-lg" src="./images/screenshot2.png" alt="">
+                <img class="rounded-lg" src="./images/screenshot2.png" alt="">
               </div>
 
               <div class="flex">
@@ -354,7 +354,7 @@
           <li>
             <div class="space-y-4">
               <div class="aspect-w-3 aspect-h-2">
-                <img class="object-cover rounded-lg" src="./images/screenshot4.png" alt="">
+                <img class="rounded-lg" src="./images/screenshot4.png" alt="">
               </div>
 
               <div class="flex">
