--- a/src/solutions.html
+++ b/src/solutions.html
@@ -78,24 +78,37 @@
 
 <main>
 
-    <!-- CTA Data Security Assessment -->
+    <!-- CTA - Data Security for Innovative Products     -->
     <div class="bg-gray-50">
-        <div
-                class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
-            <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-                <span class="block">Checkout our Data Security Landscape E-Book</span>
-                <span class="block text-indigo-600">and learn how to meet your industry's requirements</span>
+      <div class="max-w-7xl mx-auto px-4 py-8 sm:px-6 lg:px-8">
+        <div class="py-10 px-6 bg-indigo-600 rounded-3xl sm:py-16 sm:px-12 lg:p-20 lg:flex lg:items-center">
+          <div class="lg:w-0 lg:flex-1">
+            <h2 class="text-3xl font-extrabold tracking-tight text-white">
+              Security for Your Products
             </h2>
-            <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
-                <div class="inline-flex rounded-md shadow">
-                    <a href="#"
-                       class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
-                        onclick="location.href='mailto:info@peacemakr.io'">
-                        Request E-Book
-                    </a>
-                </div>
-            </div>
+            <p class="mt-4 max-w-3xl text-lg text-indigo-100">
+              Learn why Peacemakr is the best choice for startups and small businesses in Finance, Healthcare, Defense, and Insurance.
+            </p>
+          </div>
+          <div class="mt-12 sm:w-full sm:max-w-md lg:mt-0 lg:ml-8 lg:flex-1">
+            <form class="sm:flex" action="https://peacemakr.us1.list-manage.com/subscribe/post?u=ac9d1e71791321a3f00ebbf6d&amp;id=1f0cf83e57" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form">
+              <input type="hidden" value="128" name="group[380002][128]" id="mce-group[380002]-380002-3">
+              <label for="emailAddress" class="sr-only">Email address</label>
+              <input type="email" value="" name="EMAIL" id="mce-EMAIL" required class="w-full border-white px-5 py-3 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white rounded-md" placeholder="Enter your email">
+              <button type="submit" class="mt-3 w-full flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white sm:mt-0 sm:ml-3 sm:w-auto sm:flex-shrink-0" name="subscribe" id="mc-embedded-subscribe">
+                Get whitepaper
+              </button>
+
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
+
+              <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                <input type="text" name="b_ac9d1e71791321a3f00ebbf6d_1f0cf83e57" tabindex="-1" value="">
+              </div>
+
+            </form>
+          </div>
         </div>
+      </div>
     </div>
 
 
@@ -141,7 +154,7 @@
           <div class="flex-shrink-0">
             <div class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
               <!-- Heroicon name: outline/scale -->
-              
+
               <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
 </svg>
@@ -230,7 +243,7 @@
     </div>
   </div>
 </div>
-    
+
 
 </main>
 
