Repeat our messaging here.

--- a/src/pricing.html
+++ b/src/pricing.html
@@ -490,8 +490,8 @@
       <p class="mt-2 text-3xl font-extrabold text-white sm:text-4xl lg:text-5xl">
         Data Security for everyone
       </p>
-      <p class="mt-3 max-w-4xl mx-auto text-xl text-gray-300 sm:mt-5 sm:text-2xl">
-        Raise your data security bar today.
+      <p class="mt-3 max-w-3xl mx-auto text-xl text-gray-300 sm:mt-5 sm:text-2xl">
+        Raise your data security bar today with End-to-End-Encryption-as-a-Service. Control costs. Eliminate risky time-to-market delays.
       </p>
     </div>
   </div>
