remove @@include('./navigation_styling.html')

--- a/src/engineers_faqs.html
+++ b/src/engineers_faqs.html
@@ -37,6 +37,11 @@
             background-color: white;
             overflow: hidden;
         }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+            position: absolute;
+        }
     </style>
 
     @@include('./navigation_styling.html')
