--- a/src/media.html
+++ b/src/media.html
@@ -27,7 +27,12 @@
           content="Data Security simplified."/>
     <script src="navbar.js" type="text/javascript"></script>
 
-    @@include('./navigation_styling.html')
+    <style>
+        .dropdown:hover .dropdown-content {
+            display: block;
+            position: absolute;
+        }
+    </style>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-69K0GEH6J9"></script>
